--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 iconsdk
-icon-did-sdk @ git+ssh://git@github.com/iconloop/did-sdk-python.git@develop
+icon-did-sdk @ git+https://git@github.com/iconloop/did-sdk-python.git@develop
+yirgachefe @ git+https://git@github.com/iconloop/Yirgachefe.git@develop
