--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 iconsdk
-icon-did-sdk @ git+https://git@github.com/iconloop/did-sdk-python.git@feature/SC-296
+icon-did-sdk @ git+https://git@github.com/iconloop/did-sdk-python.git@develop
 yirgachefe @ git+https://git@github.com/iconloop/Yirgachefe.git@develop
