--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 iconsdk
 icon-did-sdk @ git+https://git@github.com/iconloop/did-sdk-python.git@develop
 requests
-yirgachefe @ git+https://git@github.com/iconloop/Yirgachefe.git@develop
+yirgachefe
