[SC-310] Add modules for `MyID Server`. (#3)
* [SC-310] Add `BaseService`.

- Add `requests` to `requirements.txt`.

* [SC-310] Add `IssuerService`.

* [SC-310] Add `VerifierService`.

- Add `to_json` method in `CredentialInfo` class.

* [SC-310] Add some logs.

* [SC-310] Edit some modules.

- `HttpUtil`, `IssuerService`.

* [SC-310] get yirgachefe form pypi

Co-authored-by: BK ‘winDy’ Sohn <windy@BKs-MacBook-Pro.local>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 iconsdk
 icon-did-sdk @ git+https://git@github.com/iconloop/did-sdk-python.git@develop
-yirgachefe @ git+https://git@github.com/iconloop/Yirgachefe.git@develop
+requests
+yirgachefe
