--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -4,13 +4,13 @@ on: [pull_request]
 
 jobs:
   unit_test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: '3.11'
       - name: Change private repo url
         run: |
           sed -i -e "s/git@/${{ secrets.ICONLOOP_PRIVATE_REPO_ACCESS_TOKEN }}@/" -e "s/git+ssh:/git+https:/" requirements.txt
@@ -28,13 +28,13 @@ jobs:
       - name: Run unit tests
         run: pytest -vx
   lint:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: '3.11'
       - name: Remove unnecessary dependencies for lint test
         run: |
           echo "" > requirements.txt
