--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,7 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: CPython",
 ]
 dependencies = [
-  # FIXME: icon-did-sdk should be edited install branch to develop
-  "icon-did-sdk @ git+https://git@github.com/iconloop/did-sdk-python.git@feature/SC-773",
+  "icon-did-sdk @ git+https://git@github.com/iconloop/did-sdk-python.git@develop",
   "iconsdk~=2.4.5",
   "loguru==0.7.0",
   "requests==2.28.2",
